# carro_SARI

./: DEPENDENCY_DIAGRAM.md  HARDWARE_GUIDE.md  HIGH_PRECISION_MODE.md  LIBRARY_DEPENDENCIES.md  MOTOR_TEST_GUIDE.md  README.md  WEB_CONTROL_GUIDE.md  WEB_CONTROL_TECHNICAL.md
components/motor_control/: CMakeLists.txt  README.md
components/motor_control/include/: motor_control.h
components/motor_control/src/: motor_control.c
components/obstacle_detection/: CMakeLists.txt
components/obstacle_detection/include/: obstacle_detection.h
components/obstacle_detection/src/: obstacle_detection.c
components/servo_control/: CMakeLists.txt  README.md  servo_control.c
components/servo_control/include/: servo_control.h
components/vl53l0x/: CMakeLists.txt
components/vl53l0x/include/: vl53l0x_device_ext.h  vl53l0x_driver.h
components/vl53l0x/src/: vl53l0x_driver.c  vl53l0x_platform_esp32.c
components/web_control/: CMakeLists.txt  README.md
components/web_control/include/: web_control.h
components/web_control/src/: web_control.c
components/web_control/www/: app.js  index.html  style.css
examples/motor_test/: CMakeLists.txt
examples/motor_test/main/: CMakeLists.txt  main.c
examples/vl53l0x_test/: CMakeLists.txt
examples/vl53l0x_test/main/: CMakeLists.txt  main.c
examples/web_control/: CMakeLists.txt  README.md
examples/web_control/main/: CMakeLists.txt  main.c
main/: CMakeLists.txt  app_config.h  main.c
